test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/orphan_rules/impl_orphan/src/lib.sw
library;

use impl_orphan_lib::Vec;
impl Vec<bool> for bool {}
